# QtBeginner

./: .gitignore  README.md
exercise1/: CMakeLists.txt  README.md  exercise1window.cpp  exercise1window.h  main.cpp
exercise1/.claude/: settings.local.json
exercise2/: CMakeLists.txt  main.cpp
exercise2_2/: CMakeLists.txt  main.cpp
exercise2_3/: CMakeLists.txt  main.cpp
exercise2_4/: CMakeLists.txt  main.cpp
exercise2_5/: CMakeLists.txt  main.cpp
exercise3_1/: CMakeLists.txt  main.cpp
exercise3_2/: CMakeLists.txt  main.cpp
exercise3_3/: CMakeLists.txt  main.cpp
exercise3_4/: CMakeLists.txt  main.cpp
exercise3_5/: CMakeLists.txt  main.cpp
exercise4_1/: main.cpp
exercise4_2/: CMakeLists.txt  main.cpp
exercise4_3/: CMakeLists.txt  main.cpp
exercise4_4/: CMakeLists.txt
exercise4_4/include/: CanvasWidget.h  MainWindow.h
exercise4_4/src/: CanvasWidget.cpp  MainWindow.cpp
exercise4_5/: CMakeLists.txt  main.cpp
exercise5_1/: CMakeLists.txt
exercise5_1/include/: ClockWidget.h  MainWindow.h
exercise5_1/src/: ClockWidget.cpp  MainWindow.cpp
exercise5_2/: CMakeLists.txt
exercise5_2/include/: MainWindow.h  ProgressRing.h
exercise5_2/src/: MainWindow.cpp  ProgressRing.cpp
exercise5_3/: CMakeLists.txt
exercise5_3/include/: MainWindow.h  StarRatingWidget.h
exercise5_3/src/: MainWindow.cpp  StarRatingWidget.cpp
exercise5_4/: CMakeLists.txt
exercise5_4/include/: MainWindow.h  TrafficLightWidget.h
exercise5_4/src/: MainWindow.cpp  TrafficLightWidget.cpp
exercise5_5/: CMakeLists.txt
exercise6_1/: CMakeLists.txt
exercise6_1/include/: SettingDialog.h
exercise6_1/src/: SettingDialog.cpp  main.cpp
